MOD: Cambios de X en numeros comprados.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Números con X</title>
+    <title>Tabla de Números</title>
     <style>
         table {
             border-collapse: collapse;
@@ -40,29 +40,49 @@
     <table>
         <thead>
             <tr>
-                <th>Col1</th>
-                <th>Col2</th>
-                <th>Col3</th>
-                <th>Col4</th>
-                <th>Col5</th>
+                <th>:)</th>
+                <th>:)</th>
+                <th>:)</th>
+                <th>:)</th>
+                <th>:)</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>848576</td>
-                <td class="crossed">848577</td> <!-- Aquí hay una X -->
-                <td>848578</td>
-                <td>848579</td>
-                <td>848580</td>
+                <td class="crossed">848576</td>
+                <td>848577</td>
+                <td class="crossed">848578</td>
+                <td class="crossed">848579</td>
+                <td class="crossed">848580</td>
             </tr>
             <tr>
                 <td>848581</td>
                 <td>848582</td>
                 <td>848583</td>
-                <td class="crossed">848584</td> <!-- Y aquí hay otra X -->
+                <td>848584</td>
                 <td>848585</td>
             </tr>
-            <!-- Resto de filas ... -->
+            <tr>
+                <td class="crossed">848586</td>
+                <td class="crossed">848587</td>
+                <td class="crossed" >848588</td>
+                <td class="crossed">848589</td>
+                <td>848590</td>
+            </tr>
+            <tr>
+                <td>848591</td>
+                <td>848592</td>
+                <td>848593</td>
+                <td>848594</td>
+                <td>848595</td>
+            </tr>
+            <tr>
+                <td>848596</td>
+                <td>848597</td>
+                <td class="crossed">848598</td>
+                <td>848599</td>
+                <td class="crossed">848600</td>
+            </tr>
         </tbody>
     </table>
 </body>
