MOD: venta madre

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 <td class="crossed">848587</td>
                 <td class="crossed" >848588</td>
                 <td class="crossed">848589</td>
-                <td>848590</td>
+                <td class="crossed">848590</td>
             </tr>
             <tr>
-                <td>848591</td>
-                <td>848592</td>
-                <td>848593</td>
-                <td>848594</td>
-                <td>848595</td>
+                <td class="crossed">848591</td>
+                <td class="crossed">848592</td>
+                <td class="crossed">848593</td>
+                <td class="crossed">848594</td>
+                <td class="crossed">848595</td>
             </tr>
             <tr>
                 <td>848596</td>
